[package]
name = "sqlite_paquete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11", features = ["blocking"] }
rusqlite = "^0.29"
csv = "^1.0"
assert_cmd = "^2.0"
predicates = "0.9"
libc = "0.2"
rust-bert = "0.20.0"

[dependencies.sqlite3-sys]
version = "0.15.2"
default-features = false


